--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Install dependencies
         run: |
           rm -rf node_modules package-lock.json
-          npm install
+          npm install --legacy-peer-deps
 
       - name: Generate Prisma Client
         run: npx prisma generate
