--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,7 @@ jobs:
         run: npx prisma generate
         env:
           DATABASE_URL: postgresql://user:password@localhost:5432/test_db
+          JWT_SECRET: ${{ your-super-secret-jwt-key.JWT_SECRET }}
 
       - name: Run linter
         run: npm run lint
