--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "template-tcg-api",
   "version": "1.0.0",
-  "author": "",
+  "author": "https://nodejs-api-pokedex-heexaaq-production.up.railway.app/api/cards",
   "description": "TCG Pokemon-like Backend Server",
   "main": "dist/index.js",
   "scripts": {
